@@ -6,6 +6,7 @@ use warnings;
 our $VERSION = '2.64';
 
 use Carp ();
+use Try::Tiny;
 use Log::Dispatch;
 use Log::Dispatch::Types;
 use Log::Dispatch::Vars qw( %LevelNamesToNumbers @OrderedLevels );
@@ -85,12 +86,12 @@ sub new {
 
         $self->{name} = $p{name} || $self->_unique_name();
 
-        eval { $self->{min_level} = $self->_level_as_number( $p{min_level} ) };
-        Carp::croak "Invalid level specified for min_level"
+        try { $self->{min_level} = $self->_level_as_number( $p{min_level} ) };
+        Carp::croak 'Invalid level specified for min_level'
             unless defined $self->{min_level};
 
         # Either use the parameter supplied or just the highest possible level.
-        eval {
+        try {
             $self->{max_level} = (
                 exists $p{max_level}
                 ? $self->_level_as_number( $p{max_level} )
@@ -98,7 +99,7 @@ sub new {
             );
         };
 
-        Carp::croak "Invalid level specified for max_level"
+        Carp::croak 'Invalid level specified for max_level'
             unless defined $self->{max_level};
 
         $self->{callbacks} = $p{callbacks} if $p{callbacks};
